Fix dark mode button on-click CSS.

--- a/src/index.css
+++ b/src/index.css
@@ -45,10 +45,15 @@ button {
 
 i {
   font-size: 20px;
-  color: #000;
+  color: #444;
   position: absolute;
   top: 20px;
   right: 20px;
+}
+
+i:hover {
+  cursor: pointer;
+  opacity: 0.75;
 }
 
 #page.dark i {
